# fooo-r

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  pyvenv.cfg
food_r/: __main__.py  manage.py  urls.py  wsgi.py
food_r/extensions/database/: mixins.py
food_r/extensions/rest_framework/: pagination.py
food_r/modules/recipes/: models.py
food_r/modules/recipes/api/: serializers.py  urls.py  views.py
food_r/modules/recipes/migrations/: 0001_initial.py
food_r/modules/users/: models.py
food_r/modules/users/api/: serializers.py  urls.py  views.py
food_r/modules/users/migrations/: 0001_initial.py
food_r/settings/: config.py  consts.py
food_r/settings/components/: authentication.py  common.py  database.py  swagger.py
food_r/settings/environments/: development.py
tests/: conftest.py
tests/fixtures/: recipes.py  rest_framework.py  users.py
tests/modules/recipes/: test_api.py  test_models.py
tests/modules/users/: test_api.py  test_models.py
